--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Products/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Products/Index.cshtml
@@ -204,7 +204,7 @@
                                             {
                                                 <div class="carousel-item @(i == 0 ? "active" : "")">
                                                     <img src="@imageList[i].Url" class="d-block w-100"
-                                                    alt="Product image @(i + 1)" style="height: 200px; object-fit: cover;">
+                                                    alt="Product image @(i + 1)">
                                                 </div>
                                             }
                                         </div>
