--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Challenges/Edit.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Challenges/Edit.cshtml
@@ -74,6 +74,22 @@
                 <span asp-validation-for="ReleaseDate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label>Existing Images</label>
+                @foreach (var image in Model.Images)
+                {
+                    <div class="image-container">
+                        <img src="@image.Url" alt="Challenge image" style="max-width: 200px;" />
+                        <div class="form-check">
+                            <input type="checkbox"
+                                   name="deleteImageIds"
+                                   value="@image.Id"
+                                   class="form-check-input" />
+                            <label class="form-check-label">Delete</label>
+                        </div>
+                    </div>
+                }
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
