--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/OrderDetails/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/OrderDetails/Index.cshtml
@@ -42,7 +42,7 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Order.Status)
+                    @Html.DisplayFor(modelItem => item.Order.OrderStatusId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Product.Name)
