--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
@@ -109,10 +109,7 @@
     .footer a::after {
     content: '';
     position: absolute;
-    width: 0;
-    height: 1px;
-    bottom: -2px;
-    left: 0;
+    width: 100%;
     background-color: var(--accent-color);
     transition: width 0.3s ease;
     }
