--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/UserOrders/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/UserOrders/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Mis Pedidos";
 }
 
-<div class="container mt-5">
+<div class="container pb-5 mb-5">
     <h1 class="mb-4 text-center">Mis Pedidos</h1>
 
     @if (TempData["ErrorMessage"] != null)
