--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Shared/_Layout.cshtml
@@ -195,6 +195,7 @@
     <main class="flex-grow-1">
         <div class="container py-5">
             @RenderBody()
+            @RenderSection("Styles", false)
         </div>
     </main>
 
