--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/Index.cshtml
@@ -61,6 +61,6 @@
 
 <!-- SCRIPTS -->
 @section Scripts {
-    <script src="~/js/showcase/filters.js" asp-append-version="true"></script>
-    <script src="~/js/showcase/products_interactions.js" asp-append-version="true"></script>
+    <script type="module" src="~/js/showcase/filters.js" asp-append-version="true"></script>
+    <script type="module" src="~/js/showcase/products_interactions.js" asp-append-version="true"></script>
 }
