Prueba Servicio Filtrado

--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/_ProductModal.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/_ProductModal.cshtml
@@ -87,6 +87,7 @@
                                                    id="quantity-@Model.Id"
                                                    data-product-id="@Model.Id"
                                                    class="form-control quantity-input text-center border-0 w-50"
+                                                   data-max="@Model.TotalStock"
                                                    value="1"
                                                    inputmode="numeric"
                                                    pattern="[0-9]*"
