--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/Index.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/Index.cshtml
@@ -39,11 +39,21 @@
     </ul>
 </div>
 
+<input type="hidden" id="activeTab" name="activeTab" value="@activeTab">
+
 <!-- FILTROS -->
-@Html.Partial("_FiltersPartial")
+<form id="filterForm">
+    @Html.Partial("_FiltersPartial")
+</form>
 
 <!-- CONTENEDOR DINÁMICO -->
 <div id="tabContent">
+
+<!-- Loading Overlay -->
+<div id="loadingOverlay" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); justify-content:center; align-items:center; z-index:9999;">
+    <div class="spinner-border text-light" style="width:3rem; height:3rem;"></div>
+</div>
+
     @if (activeTab == "challenges")
     {
         @Html.Partial("_ChallengesPartial", Model)
@@ -61,6 +71,5 @@
 
 <!-- SCRIPTS -->
 @section Scripts {
-    <script type="module" src="~/js/showcase/filters.js" asp-append-version="true"></script>
-    <script type="module" src="~/js/showcase/products_interactions.js" asp-append-version="true"></script>
+    <script type="module" src="~/js/showcase/showcase.js" asp-append-version="true"></script>
 }
