--- a/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/_ProductsPartial.cshtml
+++ b/SERVER/VESTIGIO PROYECT - IDENTITY NEW/Vestigio/Vestigio/Views/Showcase/_ProductsPartial.cshtml
@@ -31,3 +31,7 @@
         </div>
     }
 </div>
+
+@section Scripts {
+    <script src="~/js/showcase/products_interactions.js" asp-append-version="true"></script>
+}
